change image to test image
Signed-off-by: Vedant Mahabaleshwarkar <vmahabal@redhat.com>

--- a/config/base/params.env
+++ b/config/base/params.env
@@ -1,1 +1,1 @@
-odh-model-controller=quay.io/opendatahub/odh-model-controller:fast
+odh-model-controller=quay.io/vedantm/odh-model-controller:remove-kserve-flag
