--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -214,3 +214,19 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+    - extensions
+  resources:
+    - ingresses
+  verbs:
+    - get
+    - list
+    - watch
+- apiGroups:
+    - networking.k8s.io
+  resources:
+    - ingresses
+  verbs:
+    - get
+    - list
+    - watch
