change dev image tag to latest
Signed-off-by: Vedant Mahabaleshwarkar <vmahabal@redhat.com>

--- a/config/base/params.env
+++ b/config/base/params.env
@@ -1,2 +1,2 @@
 monitoring-namespace=opendatahub
-odh-model-controller=quay.io/vedantm/odh-model-controller:rawdeployments
+odh-model-controller=quay.io/vedantm/odh-model-controller:latest
