Replace MODEL_ID with MODEL_NAME
Signed-off-by: Christina Xu <chrxu@redhat.com>

--- a/config/base/kustomization.yaml
+++ b/config/base/kustomization.yaml
@@ -21,6 +21,13 @@ vars:
       kind: ConfigMap
       name: odh-model-controller-parameters
   - fieldref:
+      fieldPath: data.caikit-standalone-image
+    name: caikit-standalone-image
+    objref:
+      apiVersion: v1
+      kind: ConfigMap
+      name: odh-model-controller-parameters
+  - fieldref:
       fieldPath: data.tgis-image
     name: tgis-image
     objref:
