--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,5 +1,4 @@
-# This file is generated automatically by `make manifests`,
-# Please, do not manually change this file.---
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -45,6 +44,18 @@ rules:
   - update
   - watch
 - apiGroups:
+  - '*'
+  resources:
+  - deployments
+  verbs:
+  - '*'
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
+  - '*'
+- apiGroups:
   - authorino.kuadrant.io
   resources:
   - authconfigs
@@ -56,6 +67,12 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - ""
+  resources:
+  - deployments
+  verbs:
+  - '*'
 - apiGroups:
   - datasciencecluster.opendatahub.io
   resources:
